<resources>
    <string name="app_name">FirebaseAppBTU1</string>
    <string name="enter_your_email">enter your email</string>
    <string name="enter_your_password">enter your password</string>
        <string name="email_hint">Email</string>
        <string name="password_hint">Password</string>
        <string name="login_button_text">Login</string>
        <string name="forgot_password_button_text">Forgot Password</string>

</resources>